Manage bus stop view where bus stops can be added/removed

--- a/res/menu/bus_view.xml
+++ b/res/menu/bus_view.xml
@@ -6,7 +6,7 @@
     <item
         android:id="@+id/action_add"
         android:orderInCategory="100"
-        android:title="Add new"
+        android:title="Add/Remove Stops"
         app:showAsAction="never"/>
 
 </menu>
