--- a/res/layout/fragment_manage_view.xml
+++ b/res/layout/fragment_manage_view.xml
@@ -5,44 +5,46 @@
     tools:context="net.mcarolan.whenzebus.ManageStops$PlaceholderFragment" >
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical" >
-        
-	            	<TextView
-	    android:id="@+id/noBusStops"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:text="@string/manage_no_bus_stops"
-	    android:layout_weight="1"
-	    android:visibility="gone" />
-	    
-	            	
-		       <ListView
-		    android:id="@+id/manageListview"
-		    android:layout_width="fill_parent"
-		    android:layout_height="fill_parent"
-	    	android:layout_weight="3" />
-	   
-		       <LinearLayout
-		           android:layout_weight="1"
-		           android:layout_height="wrap_content"
-		           android:layout_width="fill_parent">
-		    <Button 
-		        android:id="@+id/deleteSelectedBusStop"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:text="@string/manage_delete"
-		        />
-		    
-		    <Button
-		        android:id="@+id/manageAddBusStop"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:text="@string/add_button" />
-	    </LinearLayout>
-    
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/noBusStops"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="3"
+            android:text="@string/manage_no_bus_stops" />
+
+        <ListView
+            android:id="@+id/manageListview"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="3" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:orientation="horizontal"
+            android:layout_weight="1" >
+
+            <Button
+                android:id="@+id/deleteSelectedBusStop"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/manage_delete" />
+
+            <Button
+                android:id="@+id/manageAddBusStop"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/add_button" />
+            
+        </LinearLayout>
     </LinearLayout>
 
-   </RelativeLayout>
+</RelativeLayout>
