--- a/res/layout/activity_busstopview.xml
+++ b/res/layout/activity_busstopview.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/manageContainer"
+    android:id="@+id/busStopViewContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="net.mcarolan.whenzebus.ManageStops"
+    tools:context="net.mcarolan.whenzebus.BusStopView"
     tools:ignore="MergeRootFrame" />
