--- a/res/layout/fragment_bus_view.xml
+++ b/res/layout/fragment_bus_view.xml
@@ -7,14 +7,12 @@
     <ListView
 	    android:id="@+id/listview"
 	    android:layout_width="fill_parent"
-	    android:visibility="gone"
 	    android:layout_height="fill_parent" />
 
     <TextView
         android:id="@+id/message"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:gravity="center"
-        android:text="Select a bus stop" />
+        android:gravity="center" />
 	    
 </RelativeLayout>
