--- a/src/main/res/layout/fragment_add.xml
+++ b/src/main/res/layout/fragment_add.xml
@@ -2,13 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="@dimen/activity_margin"
     tools:context="net.mcarolan.whenzebus.AddView$PlaceholderFragment" >
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentTop="true"
-        android:layout_margin="10dp"
         android:orientation="vertical" >
         
 	            	<TextView
