--- a/src/main/res/layout/fragment_bus_stop_view.xml
+++ b/src/main/res/layout/fragment_bus_stop_view.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:layout_margin="@dimen/activity_margin"
     tools:context="net.mcarolan.whenzebus.BusStopListView$PlaceholderFragment" >
 
     <LinearLayout
@@ -22,7 +22,6 @@
             android:id="@+id/addRemoveBusStop"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/busStopListView"
             android:layout_weight="1"
             android:text="@string/busstoplist_add" />
 
