--- a/src/main/res/layout/fragment_bus_view.xml
+++ b/src/main/res/layout/fragment_bus_view.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="@dimen/activity_margin"
     tools:context="net.mcarolan.whenzebus.BusView$PlaceholderFragment" >
 
     <ListView
