--- a/src/main/res/layout/listitem_bus_stop.xml
+++ b/src/main/res/layout/listitem_bus_stop.xml
@@ -1,11 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:padding="6dip" >
-    
-    
+    android:layout_height="?android:attr/listPreferredItemHeight">
+
     <LinearLayout
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true">
@@ -22,7 +20,7 @@
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:orientation="vertical" >
 
